--- a/styles/style.css
+++ b/styles/style.css
@@ -1,144 +1,97 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: 'Arvo', serif;
-  background-color: #0094D4;
+  font-family: 'Arvo', sans-serif;
+  color: #252839;
 }
 
-/* header */
+.container {
+  max-width: 1000px;
+  margin: 0px auto;
+}
+
+/* Header */
 .header {
-  background: rgba(255,255,255,0.95);
-  box-shadow: 0 2px 2px rgba(0,0,0,.15);
-  width: 100%;
+  padding: 30px 0px 50px; 
 }
 
-h1 {
-  color: #473e39;
-  font-weight: 400;
-  margin: 0;
-  padding: 25.5px 7.5px;
-  text-align: center;
-}
-
-/* Top Menu */
-.menu {
-  box-shadow: 0 2px 2px rgba(0,0,0.15);
-  width: 100%;
-  text-align: center;
-}
-
-.menu .btn {
-  background: rgba(0,84,166,0.95);
-  border: none;
-  border-radius: 0;
-  box-shadow: 0 2px 2px rgba(0,0,0,.15);
-  color: #fff;
-  font-family: 'Arvo', serif;
-  font-size: 16px;
-  height: 60px;
-  width: 111px;
-  margin: 15px 7.5px;
-}
-
-.menu a {
-  color: #fff;
+.header a {
   text-decoration: none;
-
 }
 
-.menu button.active {
-  background: rgba(0,129,255,0.95);
+.header h1{
+  font-size: 30px;
+  color: #252839;
 }
 
-.top {
-  background: rgba(228, 228, 228, .95);
+.header ul li a {
+	color: #252839;
+  margin: 0px;
+  border: 0px;
 }
 
-.middle {
-  background: rgba(255,255,255,0.95);
+/* Jumbotron */
+.jumbotron {
+  background-color: #fff;
 }
 
-/* list */
-.main {
-  padding: 120px 10px 0;
-  width: 100%;
+.jumbotron h2 {
+  font-size: 50px;
+  margin-bottom: 120px;
 }
 
-.list p {
-  background: rgba(255,255,255,0.95);
-  box-shadow: 0 2px 2px rgba(0,0,0,.15);
-  color: #473e39; 
-  font-size: 16px;
-  margin: 0 auto 5px;
-  padding: 20px;
-  max-width: 520px;
+.jumbotron h2 span {
+  color: #f2b632;  
 }
 
-.list p .glyphicon-star {
-  cursor: pointer;
-  margin: 0 10px 0 10px;
-}
-
-.list p .glyphicon-star:hover, .list p .active {
-  color: #ffcc00;
-}
-
-.list p .glyphicon-remove {
-  cursor: pointer;
-  float: right;
-}
-
-.list p .glyphicon-remove:hover {
-  color: #ed1c24;
-}
-
-/* form */
-form.form {
-  color: #473e39; 
-  height: 60px;
-  margin: 0 auto 5px;
-  padding: 0;
-  width: 380px;
-}
-
-.form-container {
-  max-width: 380px;
-}
-
-.form input {
-  background: rgba(228,228,228,.95);
-  border: none;
-  box-shadow: 0 2px 2px rgba(0,0,0,.15);
-  color: #473e39;
-  float: left;
-  font-family: 'Arvo', serif;
-  font-size: 16px;
-  height: 60px;
-  margin: 0 5px 0 0;
-  padding: 0 20px;
-  width: 315px;
-}
-
-.form input:focus {
-  background: rgba(255,255,255,.95);
-  box-shadow: 0 2px 2px rgba(0,0,0,.15);
-  outline: none;
-}
-
-.form button.btn {
-  background: rgba(0,84,166,0.95);
-  border: none;
-  border-radius: 0;
-  box-shadow: 0 2px 2px rgba(0,0,0,.15);
+/* Banner */
+.banner {
+  background-color: #b5b5b7;
+  text-align: center;
   color: #fff;
-  float: left;
-  font-family: 'Arvo', serif;
-  font-size: 16px;
-  height: 60px;
-  width: 60px;
+  padding: 20px;
 }
 
-.form button:hover{
-  background: rgba(0,129,255,0.95);
-  cursor: pointer;
+.banner h3 {
+  margin-bottom: 40px;
+}
+
+.banner img {
+	margin: 20px;
+}
+
+/* Projects */
+.projects {
+  text-align: center;
+  padding: 20px 20px 120px 20px;
+}
+
+.projects h1 {
+  margin-bottom: 40px;
+}
+
+.projects img {
+  margin: 0px;
+}
+
+/* Contact */
+.contact {
+  background-color: #b5b5b7;
+  text-align: center;
+  color: #fff;
+  padding: 20px 20px 40px 20px;
+}
+
+.contact h3 {
+  font-size: 36px;
+  margin-bottom: 30px;
+}
+
+.contact p {
+  font-size: 18px;
+  margin-bottom: 30px
+}
+
+.contact img {
+  padding: 10px;
 }
