--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,21 @@ html, body {
   margin: 0px auto;
 }
 
+.col-md-12 {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.col-md-4 {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.row {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
 /* Header */
 .header {
   padding: 30px 0px 50px; 
@@ -25,7 +40,7 @@ html, body {
 }
 
 .header ul li a {
-	color: #252839;
+  color: #252839;
   margin: 0px;
   border: 0px;
 }
@@ -57,13 +72,13 @@ html, body {
 }
 
 .banner img {
-	margin: 20px;
+  margin: 20px;
 }
 
 /* Projects */
 .projects {
   text-align: center;
-  padding: 20px 20px 120px 20px;
+  padding: 20px 0px 120px 0px;
 }
 
 .projects h1 {
@@ -72,6 +87,37 @@ html, body {
 
 .projects img {
   margin: 0px;
+  border: solid 10px #687178;
+  border-radius: 10px;
+}
+
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Uncomment everything commented to CSS for the hide/show */
+.img-title {
+  position: absolute;
+  top: 0;
+  margin: 0;
+  height: 20%;
+  width: 100%;
+  text-align: center;
+  display: none;
+  background-color: rgba(104,113,120, 0.95);
+  border: solid 10px #687178;
+  border-radius: 10px;
+}
+
+.img-title p {
+  position: absolute;
+  color: #fff;
+  top: 20%;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
 }
 
 /* Contact */
@@ -94,4 +140,78 @@ html, body {
 
 .contact img {
   padding: 10px;
+  text-align: right;
+}
+
+/* Media */
+@media (max-width: 717px) {
+  .img-title {
+    position: absolute;
+    top: 0;
+    margin: 0;
+    height: 20%;
+    width: 100%;
+    text-align: center;
+    display: none;
+    background-color: rgba(104,113,120, 0.95);
+    border: solid 10px #687178;
+    border-radius: 10px;
+  }
+
+.img-title p {
+    position: absolute;
+    color: #fff;
+    top: 10%;
+    width: 100%;
+    text-align: center;
+    font-size: 15px;
+  }  
+}
+
+@media (max-width: 520px) {
+  .img-title {
+    position: absolute;
+    top: 0;
+    margin: 0;
+    height: 20%;
+    width: 100%;
+    text-align: center;
+    display: none;
+    background-color: rgba(104,113,120, 0.95);
+    border: solid 10px #687178;
+    border-radius: 10px;
+  }
+
+.img-title p {
+    position: absolute;
+    color: #fff;
+    top: 5%;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+  }  
+}
+
+@media (max-width: 420px) {
+  .img-title {
+    position: absolute;
+    top: 0;
+    margin: 0;
+    height: 30%;
+    width: 100%;
+    text-align: center;
+    display: none;
+    background-color: rgba(104,113,120, 0.95);
+    border: solid 10px #687178;
+    border-radius: 10px;
+  }
+
+.img-title p {
+    position: absolute;
+    color: #fff;
+    top: 5%;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+  }  
 }
