--- a/styles/style.css
+++ b/styles/style.css
@@ -10,17 +10,17 @@ html, body {
   margin: 0px auto;
 }
 
-.col-md-12 {
+.projects .col-md-12 {
   margin: 0px !important;
   padding: 0px !important;
 }
 
-.col-md-4 {
+.projects .col-md-4 {
   margin: 0px !important;
   padding: 0px !important;
 }
 
-.row {
+.projects .row {
   margin: 0px !important;
   padding: 0px !important;
 }
@@ -34,9 +34,13 @@ html, body {
   text-decoration: none;
 }
 
-.header h1{
+.header h1 {
   font-size: 30px;
   color: #252839;
+}
+
+.header .nav {
+  margin-top: 8px;
 }
 
 .header ul li a {
@@ -59,26 +63,12 @@ html, body {
   color: #f2b632;  
 }
 
-/* Banner */
-.banner {
-  background-color: #b5b5b7;
-  text-align: center;
-  color: #fff;
-  padding: 20px;
-}
-
-.banner h3 {
-  margin-bottom: 40px;
-}
-
-.banner img {
-  margin: 20px;
-}
-
 /* Projects */
 .projects {
+  background-color: #b5b5b7;
+  color: #fff;
   text-align: center;
-  padding: 20px 0px 120px 0px;
+  padding: 20px 0px 80px 0px;
 }
 
 .projects h1 {
@@ -87,8 +77,9 @@ html, body {
 
 .projects img {
   margin: 0px;
-  border: solid 10px #687178;
-  border-radius: 10px;
+  border: solid 5px #687178;
+  border-radius: 5px;
+  margin-bottom: 40px;
 }
 
 .center-block {
@@ -107,8 +98,8 @@ html, body {
   text-align: center;
   display: none;
   background-color: rgba(104,113,120, 0.95);
-  border: solid 10px #687178;
-  border-radius: 10px;
+  border: solid 5px #687178;
+  border-radius: 5px;
 }
 
 .img-title p {
@@ -120,17 +111,61 @@ html, body {
   font-size: 20px;
 }
 
+/* Books */
+.books {
+  color: #252839;
+  text-align: center;
+  padding: 20px 0px 95px 0px;
+}
+
+.books h1 {
+  margin-bottom: 20px;
+}
+
+.books p {
+  margin-bottom: 30px;
+}
+
+.books img {
+  margin: 0px;
+  border: solid 5px #687178;
+  border-radius: 5px;
+}
+
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.bookWrapper {
+  display: table;
+  margin: auto;
+}
+
+.bookWrapper img {
+  border: solid 5px #687178;
+  border-radius: 5px;
+}
+
+.bookWrapper p {
+  display: table-caption;
+  caption-side: bottom;
+  text-align: center;
+  margin: 5px 0px 25px 0px;
+  color: #252839;
+}
+
 /* Contact */
 .contact {
   background-color: #b5b5b7;
-  text-align: center;
   color: #fff;
+  text-align: center;
   padding: 20px 20px 40px 20px;
 }
 
-.contact h3 {
-  font-size: 36px;
-  margin-bottom: 30px;
+.contact h1 {
+  margin-bottom: 40px;
 }
 
 .contact p {
@@ -154,8 +189,8 @@ html, body {
     text-align: center;
     display: none;
     background-color: rgba(104,113,120, 0.95);
-    border: solid 10px #687178;
-    border-radius: 10px;
+    border: solid 5px #687178;
+    border-radius: 5px;
   }
 
 .img-title p {
@@ -178,11 +213,11 @@ html, body {
     text-align: center;
     display: none;
     background-color: rgba(104,113,120, 0.95);
-    border: solid 10px #687178;
-    border-radius: 10px;
+    border: solid 5px #687178;
+    border-radius: 5px;
   }
 
-.img-title p {
+  .img-title p {
     position: absolute;
     color: #fff;
     top: 5%;
@@ -202,8 +237,8 @@ html, body {
     text-align: center;
     display: none;
     background-color: rgba(104,113,120, 0.95);
-    border: solid 10px #687178;
-    border-radius: 10px;
+    border: solid 5px #687178;
+    border-radius: 5px;
   }
 
 .img-title p {
