--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,8 @@ html, body {
 /* Jumbotron */
 .jumbotron {
   background-color: #fff;
+  max-width: 1000px;
+  margin: 0px auto;
 }
 
 .jumbotron h2 {
