--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,11 @@ html, body {
 }
 
 .projects h1 {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+}
+
+.projects p {
+  margin-bottom: 30px;
 }
 
 .projects img {
@@ -82,12 +86,6 @@ html, body {
   border: solid 5px #687178;
   border-radius: 5px;
   margin-bottom: 40px;
-}
-
-.center-block {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 /* Uncomment everything commented to CSS for the hide/show */
